--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,21 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script src="https://www.gstatic.com/firebasejs/5.8.4/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.8.4/firebase-firestore.js"></script>
+<script>
+  // Initialize Firebase
+  var fbConfig = {
+    apiKey: "AIzaSyCVfHYEzr_acJtRW8u34b6371zHKJDN7fs",
+    authDomain: "react-firebase-ada.firebaseapp.com",
+    databaseURL: "https://react-firebase-ada.firebaseio.com",
+    projectId: "react-firebase-ada",
+    storageBucket: "react-firebase-ada.appspot.com",
+    messagingSenderId: "865733052309"
+  };
+  firebase.initializeApp(fbConfig);
+  window.db = firebase.firestore();
+</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -38,4 +53,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+
 </html>
